Fixed spacing of navbar.

--- a/css/experimentalcss.css
+++ b/css/experimentalcss.css
@@ -1,8 +1,7 @@
 .topnav {
 	background-color: black;
 	text-align: center;
-	padding: 1px;
-	margin-top: 20px;
+	padding: 10px 10px;
 	max-width: 100%;
 	overflow: hidden;
 }
@@ -11,9 +10,11 @@
 	text-align: center;
 	display: block;
 	color: white;
-	font-size: 17px;
-	padding: 14px 16px;
+	font-size: 3vw;
+	padding: 1px 0.8vw;
 	float: left;
+	margin-left: 6vw;
+	margin-right: 6vw;
 }
 .name a {
 	font-size: 2.5vw;
@@ -43,9 +44,12 @@
     top: 0;
   }
   .topnav.responsive a {
-	padding: 14px 16px;
+	padding: 10px 16px;
     float: none;
     display: block;
     text-align: center;
+  }
+  .topnav a {
+	font-size: 6vw;
   }
 }
